greycat-analyzer-syntax/snapshots/parser_fixtures__stmts_rules__in.snap
---
source: greycat-analyzer-syntax/tests/snapshot.rs
expression: "/// Foo\n@bar\n/// Baz\n\n\nfn main() {\n    var x = 0;\n        var y = 1;\nvar z = 2;\n\n    /* block comment */\n    if (x < z) {\n        var x = 1;\n\nprintln(\"hello\");\n    }\n}\n"
---
(module
  (fn_decl
    (doc
      (doc_comment '/// Foo')
    )
    (annotations
      (annotation
        (ident 'bar')
      )
    )
    (line_comment '/// Baz')
    name: (ident 'main')
    params: (fn_params '()')
    body: (block
      (var_decl
        name: (ident 'x')
        (initializer
          expr: (number
            (number_int '0')
          )
        )
      )
      (var_decl
        name: (ident 'y')
        (initializer
          expr: (number
            (number_int '1')
          )
        )
      )
      (var_decl
        name: (ident 'z')
        (initializer
          expr: (number
            (number_int '2')
          )
        )
      )
      (if_stmt
        condition: (binary_expr
          left: (ident 'x')
          right: (ident 'z')
        )
        then_branch: (block
          (var_decl
            name: (ident 'x')
            (initializer
              expr: (number
                (number_int '1')
              )
            )
          )
          (expr_stmt
            (call_expr
              fn: (ident 'println')
              (args
                (string
                  (string_fragment 'hello')
                )
              )
            )
          )
        )
      )
    )
  )
)
